--- a/src/app/pages/landing/landing.html
+++ b/src/app/pages/landing/landing.html
@@ -1,2 +1,5 @@
-<app-home *ngIf="!isLoggedIn"></app-home>
-<app-dashboard *ngIf="isLoggedIn"></app-dashboard>
+@if (!isLoggedIn) {
+  <app-home />
+} @else {
+  <app-dashboard />
+}
