--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -4,39 +4,49 @@
       <a routerLink="/">RPGPlace</a>
     </h1>
     <div class="flex-grow text-center">
-      <h1 *ngIf="tableName" class="text-xl font-semibold">{{ tableName | titlecase }}</h1>
+      @if (tableName) {
+        <h1 class="text-xl font-semibold">{{ tableName | titlecase }}</h1>
+      }
     </div>
     <nav class="flex items-center">
       <ul class="flex space-x-4 items-center">
-        <li *ngIf="!isAuthenticated">
-          <a routerLink="/">Home</a>
-        </li>
-        <li *ngIf="!isAuthenticated">
-          <a routerLink="/login">Login</a>
-        </li>
-        <li *ngIf="!isAuthenticated">
-          <a routerLink="/register">Register</a>
-        </li>
-        
+        @if (!isAuthenticated()) {
+          <li>
+            <a routerLink="/">Home</a>
+          </li>
+          <li>
+            <a routerLink="/login">Login</a>
+          </li>
+          <li>
+            <a routerLink="/register">Register</a>
+          </li>
+        }
       </ul>
-      <div class="relative ml-4 flex items-center" *ngIf="isAuthenticated">
-        <button (click)="toggleDropdown()" class="focus:outline-none">
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-text" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5.121 17.804A13.937 13.937 0 0112 16c2.5 0 4.847.655 6.879 1.804M15 10a3 3 0 11-6 0 3 3 0 016 0zm6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
-          </svg>
-        </button>
-        <div *ngIf="isDropdownOpen" class="absolute right-0 top-full w-48 bg-surface rounded-md shadow-lg py-1 z-20 mr-1">
-          <a (click)="navigateToMyAccount()" class="block px-4 py-2 text-text hover:bg-background cursor-pointer">Minha Conta</a>
-          <a (click)="logout()" class="block px-4 py-2 text-text hover:bg-background cursor-pointer">Logout</a>
+      @if (isAuthenticated()) {
+        <div class="relative ml-4 flex items-center">
+          <button (click)="toggleDropdown()" class="focus:outline-none">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-text" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5.121 17.804A13.937 13.937 0 0112 16c2.5 0 4.847.655 6.879 1.804M15 10a3 3 0 11-6 0 3 3 0 016 0zm6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+            </svg>
+          </button>
+          @if (isDropdownOpen) {
+            <div class="absolute right-0 top-full w-48 bg-surface rounded-md shadow-lg py-1 z-20 mr-1">
+              <a (click)="navigateToMyAccount()" class="block px-4 py-2 text-text hover:bg-background cursor-pointer">Minha Conta</a>
+              <a (click)="logout()" class="block px-4 py-2 text-text hover:bg-background cursor-pointer">Logout</a>
+            </div>
+          }
         </div>
-      </div>
+      }
       <button (click)="toggleTheme()" class="ml-4">
-        <svg *ngIf="theme() === 'claro'" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-yellow-500" fill="currentColor" viewBox="0 0 24 24">
-          <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM12 18c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6zm0-10c-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4z"/>
-        </svg>
-        <svg *ngIf="theme() === 'escuro'" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-white" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z" />
-        </svg>
+        @if (theme() === 'claro') {
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-yellow-500" fill="currentColor" viewBox="0 0 24 24">
+            <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM12 18c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6zm0-10c-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4z"/>
+          </svg>
+        } @else {
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-white" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z" />
+          </svg>
+        }
       </button>
     </nav>
   </div>
